--- a/index.html
+++ b/index.html
@@ -6,7 +6,42 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Aqui será o logo do colégio</h1>
+
+<header>
+
+
+<img class="imagem-cabecalho" src="./img/logo.png" alt="logo do colegio do cladino">
+<h1 class="título-cabecalho">Colégio Dr Claudino Dos Santos</h1>
+<ul>
+    <li>Alunos</li>
+    <li>Merenda</li>
+    <li>Horário</li>
+
+</ul>
+
+</header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <h2>data de 1914 a inauguração do Grupo Escolar, obedecendo a um projeto que teve, no Estado, mais dois outros exemplares: um em Tibagi e outro em Palmeira. Construído em alvenaria de tijolo, possui um pavimento soerguido sobre porão alto.
+
+        É uma edificação de pavimento único com um partido arquitetônico simétrico, destacando-se no eixo central um majestoso pórtico de entrada valorizado pela escadaria de acesso e pelo frontão, neobarroco, coroado por pináculos. Em ambos os lados há uma sequência cadenciada de janelões arrematados por vergas em arco abatido.</h2>
 </body>
 </html>
