--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<header>
+<header class="cabecalho">
 
 
 <img class="imagem-cabecalho" src="./img/logo.png" alt="logo do colegio do cladino">
-<h1 class="título-cabecalho">Colégio Dr Claudino Dos Santos</h1>
+<h1 class="título-cabecalho">Colégio Dr. Claudino Dos Santos</h1>
 <ul>
-    <li>Alunos</li>
-    <li>Merenda</li>
-    <li>Horário</li>
+    <li class="cabecalho-item">Alunos</li>
+    <li class="cabecalho-item">Merenda</li>
+    <li class="cabecalho-item">Horário</li>
 
 </ul>
 
