--- a/index.html
+++ b/index.html
@@ -6,31 +6,66 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<header> 
 
-<header class="cabecalho">
 
 
-<img class="imagem-cabecalho" src="./img/logo.png" alt="logo do colegio do cladino">
-<h1 class="título-cabecalho">Colégio Dr. Claudino Dos Santos</h1>
+
+
+    <img class="imagem-cabecalho" src="./img/logo.png" alt="logo do colegio claidino">
+    <h1 class="titulocabecalho">Colegio DR. Claudino Dos Santos</h1>
 <ul>
-    <li class="cabecalho-item">Alunos</li>
-    <li class="cabecalho-item">Merenda</li>
-    <li class="cabecalho-item">Horário</li>
-
+<li>Alunos</li>
+<li>Merenda</li>
+<li>Horarios</li>
 </ul>
-
 </header>
+
+
+
+
 <section class="escola">
-<h2 class="escola-titulo"> Conheça Um Pouco Sobre O Colégio</h2>
+<h2 class="escola-titulo"> Conheça um pouco do colégio</h2>
 
 <div class="escola-conteudo">
-
     <p>data de 1914 a inauguração do Grupo Escolar, obedecendo a um projeto que teve, no Estado, mais dois outros exemplares: um em Tibagi e outro em Palmeira. Construído em alvenaria de tijolo, possui um pavimento soerguido sobre porão alto.
 
         É uma edificação de pavimento único com um partido arquitetônico simétrico, destacando-se no eixo central um majestoso pórtico de entrada valorizado pela escadaria de acesso e pelo frontão, neobarroco, coroado por pináculos. Em ambos os lados há uma sequência cadenciada de janelões arrematados por vergas em arco abatido.</p>
+   
     </div>
-    <img class="escola-imagem" src="./img/livros.png" alt="livros do colégio Claudino">
+    <img class="escola-imagem" src="./img/livros.jpeg" alt="livros do colegio Claudino">
+</section>
 
-    </section>
-    </body>
+
+
+
+
+<section class="estudante">
+    <h2 class="estudante-titulo">Conheça nossos estudantes!!!</h2>
+    
+    <div>
+        <img class="aluno-um" src="./img/neymar.png">
+        <h3>Neymar</h3>
+
+    </div>
+
+    <div>
+        <img class="aluno-um" src="./img/Tayson.jpg">
+        <h3>Tayson</h3>
+    </div>
+
+</section>
+   
+   
+</body>
 </html>
+<div>
+    <img class="aluno-um" src="./img/images.jpeg">
+    <h3>Lionel Messi</h3>
+</div>
+
+<div>
+    <img class="aluno-um" src="./img/loud-victor-175520505-466363437749432-1600075212186685867-n.webp">
+    <h3>Laud Coringa</h3>
+</div>
+
