--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<header> 
+<header class="cabecalho"> 
 
 
 
@@ -15,9 +15,9 @@
     <img class="imagem-cabecalho" src="./img/logo.png" alt="logo do colegio claidino">
     <h1 class="titulocabecalho">Colegio DR. Claudino Dos Santos</h1>
 <ul>
-<li>Alunos</li>
-<li>Merenda</li>
-<li>Horarios</li>
+<li class="cabecalho-itens">Alunos</li>
+<li class="cabecalho-itens">Merenda</li>
+<li class="cabecalho-itens">Horarios</li>
 </ul>
 </header>
 
@@ -25,47 +25,102 @@
 
 
 <section class="escola">
-<h2 class="escola-titulo"> Conheça um pouco do colégio</h2>
 
-<div class="escola-conteudo">
-    <p>data de 1914 a inauguração do Grupo Escolar, obedecendo a um projeto que teve, no Estado, mais dois outros exemplares: um em Tibagi e outro em Palmeira. Construído em alvenaria de tijolo, possui um pavimento soerguido sobre porão alto.
+    <h2 class="escola-titulo">Conheça um pouco do colégio</h2>
 
-        É uma edificação de pavimento único com um partido arquitetônico simétrico, destacando-se no eixo central um majestoso pórtico de entrada valorizado pela escadaria de acesso e pelo frontão, neobarroco, coroado por pináculos. Em ambos os lados há uma sequência cadenciada de janelões arrematados por vergas em arco abatido.</p>
-   
+    <div class="escola-conteudo">
+        <p class="escola-texto-um">O Colégio Estadual Dr. Claudino dos Santos foi criado em 06 de outubro
+        de 1914. Recebeu este nome em homenagem a Claudino Dagoberto Ferreira
+        dos Santos. Dr. Claudino foi um personagem de destaque em sua época,
+        homem culto e de inteligência privilegiada. Foi bacharel em direito,
+        poeta, escritor e jornalista. Amava apresentações teatrais e literatura.
+        Foi o fundador do Colégio Estadual do Paraná. Apesar de ter nascido no
+        Recife, foi um personagem marcante na história do Paraná, exercendo
+        importantes cargos como: Secretário do interior e da justiça, secretário
+        de instrução pública, diretor do Colégio Estadual do Paraná e prefeito
+        de Curitiba. Inicialmente o Colégio funcionava no prédio, atualmente
+        tombado pelo patrimônio histórico, onde se situa a casa da cultura. No
+        entanto, com o passar dos anos, o número de alunos foi crescendo mais e
+        mais e foi necessária a construção de novas instalações.
+        O Colégio Claudino está sob direção do Professor Fernando Colodel
+        e Diretor Auxiliar Professor Gabriel Ferro, a Equipe é formada por 57
+        professores, 15 Agentes Educacionais, 01 Secretário e a Equipe
+        Pedagógica é composta por 05 Professoras Pedagogas. Visando atender a
+        comunidade escolar enfatizando a gestão democrática e contando com o
+        apoio de uma APMF atuante, além das outras instâncias Colegiadas Como
+        Conselho Escolar e Grêmio Estudantil. Atualmente o Colégio Claudino
+        conta com 983 alunos, distribuídos nos turnos da manhã, tarde e noite,
+        Dentre as modalidades de ensino ofertadas à população estão: Ensino
+        Fundamental fase II, Ensino Médio, Ensino profissionalizante e Educação
+        de Jovens e Adultos. EJA, Projetos de contra turno como Programa Mais
+        Aprendizagem, Edutech – Games e Programação e Hora treinamento. SOMOS NA
+        ATUALIDADE UM GRANDE COLÉGIO COM ENORMES DESAFIOS!!!</h2>
     </div>
-    <img class="escola-imagem" src="./img/livros.jpeg" alt="livros do colegio Claudino">
-</section>
-
-
-
+        <img class="escola-imagem" src="./img/livro.png" alt="livros do colegio claudino">
+    </section>
 
 
 <section class="estudante">
-    <h2 class="estudante-titulo">Conheça nossos estudantes!!!</h2>
+<h2 class="estudante-titulo">Conheça nossos estudantes!!!</h2>
+
+<div class="estudante-todos">    
+
+
+
+<div class="estudante-div">
+    <img class="aluno-um" src="./img/cavalo.jpeg">
+    <h3> Tiburcio</h3>
     
-    <div>
-        <img class="aluno-um" src="./img/neymar.png">
-        <h3>Neymar</h3>
+</div>
 
-    </div>
 
-    <div>
-        <img class="aluno-um" src="./img/Tayson.jpg">
-        <h3>Tayson</h3>
-    </div>
+
+<div class="estudante-div">
+<img class="aluno-um" src="./img/tatu.png">
+<h3> Bonifácio</h3>
+
+</div>
+
+
+
+<div class="estudante-div">
+    <img class="aluno-um"  src="./img/cobra.jpeg">
+    <h3>Jacinta</h3>
+</div>
+
+
+<div  class="estudante-div" >
+    <img class="aluno-um"  src="./img/Anta.jpeg">
+    <h3>cassik</h3>
+
+
+</div> 
+</div>
+
+
+
+
+
 
 </section>
-   
-   
+
+<footer>
+    <h2 class="rodape">Dr Claudino dos Santos</h2>
+    <li class="lista-rodape"> Rua 15 de novenbro n°175</li>
+    <li class="lista-rodape">Bairro Centro da Cidade</li>
+    <li class="lista-rodape"> (42) 3242-1238</li>
+</footer>
+
+
+
+
+
+
+
+
+
+
+
+    
 </body>
 </html>
-<div>
-    <img class="aluno-um" src="./img/images.jpeg">
-    <h3>Lionel Messi</h3>
-</div>
-
-<div>
-    <img class="aluno-um" src="./img/loud-victor-175520505-466363437749432-1600075212186685867-n.webp">
-    <h3>Laud Coringa</h3>
-</div>
-
